projects/compiler/test/typechecker/multi_error_reporting/could_not_resolve_types.abra
import "./_exports" as ex

func bar(a: Abc): Int {
  val b = -a
  val c = !a
  val d = "hello $a"
  val e = (a)
  val f = r

  val g = ex?.bar
  val h = ex.bar
  val arr = [a.abc, a.def]
  val i = arr.size.absVal
  val j = [1, 2, 3][0].abs
  val k = arr.withCapacity
  // val g = ex2.bar()

  val x = a + 1
  return x
}

val abc = bar(123)
